unpackaged/main/default/objects/Send_Email__e/Send_Email__e.object-meta.xml
<CustomObject>
    <description>Created to avoid hitting SOQL limits when sending emails to a lot of recipients in a scheduled flow.</description>
    <label>Send Email</label>
    <pluralLabel>Send Emails</pluralLabel>
</CustomObject>