unpackaged/main/default/objects/Send_Email__e/fields/BCC__c.field-meta.xml
<CustomField>
    <fullName>BCC__c</fullName>
    <label>BCC</label>
    <length>150</length>
    <type>Text</type>
</CustomField>