unpackaged/main/default/objects/Send_Email__e/fields/CC__c.field-meta.xml
<CustomField>
    <fullName>CC__c</fullName>
    <label>CC</label>
    <length>150</length>
    <type>Text</type>
</CustomField>