unpackaged/main/default/objects/Send_Email__e/fields/Contact_Lead_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Contact_Lead_User_ID__c</fullName>
    <label>Contact/Lead/User ID</label>
    <length>150</length>
    <required>true</required>
    <type>Text</type>
</CustomField>