unpackaged/main/default/objects/Send_Email__e/fields/Email_Template_ID__c.field-meta.xml
<CustomField>
    <fullName>Email_Template_ID__c</fullName>
    <label>Email Template ID</label>
    <length>150</length>
    <required>true</required>
    <type>Text</type>
</CustomField>