unpackaged/main/default/objects/Send_Email__e/fields/Field_to_Update__c.field-meta.xml
<CustomField>
    <fullName>Field_to_Update__c</fullName>
    <description>Stamp the name of the field that should be updated in this Platform Event flow.</description>
    <label>Field to Update?</label>
    <length>150</length>
    <type>Text</type>
</CustomField>