unpackaged/main/default/objects/Send_Email__e/fields/Org_Wide_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Org_Wide_Email_Address__c</fullName>
    <label>Org Wide Email Address</label>
    <length>150</length>
    <type>Text</type>
</CustomField>