unpackaged/main/default/objects/Send_Email__e/fields/Related_To_ID__c.field-meta.xml
<CustomField>
    <fullName>Related_To_ID__c</fullName>
    <label>Related To ID</label>
    <length>150</length>
    <required>true</required>
    <type>Text</type>
</CustomField>