unpackaged/main/default/objects/Send_Email__e/fields/SMS__c.field-meta.xml
<CustomField>
    <fullName>SMS__c</fullName>
    <label>SMS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>